# 3Rats

./: .gitignore  README.md  RELEASES.md
3Rats/: CLAUDE.md  CMakeLists.txt  todo.txt
3Rats/scripts/scenarios/: comprehensive_demo.3rs  demo_showcase.3rs  moon_phase_setup.3rs
3Rats/scripts/test/: basic_test.3rs  category_logging_test.3rs  headless_test.3rs  logging_verification.3rs  loop_test.3rs  safety_validation.3rs  startup_test.3rs  v0.5.1_test.3rs  variable_fix_test.3rs
3Rats/scripts/utils/: clear_all.3rs  utility_test.3rs  verify_logs.3rs
3Rats/src/: 3Rats  Acteur.cpp  Acteur.h  Body.cpp  CMakeCache.txt  CTestTestfile.cmake  Console.cpp  Console.h  Controller.cpp  Controller.h  DamageNumber.cpp  DamageNumber.h  DamageNumberManager.cpp  DamageNumberManager.h  DayEvaluationScreen.cpp  DayEvaluationScreen.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  Food.cpp  GameOverScreen.cpp  GameOverScreen.h  GameSettings.cpp  GameSettings.h  HealthBar.cpp  HealthBar.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Logger.cpp  Logger.h  Makefile  Map.cpp  Map.h  Metrics.cpp  Metrics.h  Pause.cpp  ScriptExecutor.cpp  (+22 more)
3Rats/src/tests/: 3Rats_tests  CTestTestfile.cmake  Makefile  cmake_install.cmake
3Rats/tests/: CMakeLists.txt  test_enemy.cpp  test_framework.cpp  test_framework.h  test_healthbar.cpp  test_inventory.cpp  test_item_effects.cpp  test_main.cpp  test_map.cpp  test_timemanager.cpp  test_wavemanager.cpp
scripts/debug/: god_mode.3rs
scripts/scenarios/: blood_moon.3rs  moon_phase_setup.3rs
scripts/utils/: clear_all.3rs
